[package]
name = "garden-opus"
version = "0.1.0"
authors = ["David McGillicuddy <contact@djmcgill.co.uk>"]

[dependencies]
cgmath = "0.15.*"
piston = "0.34.0"
pistoncore-glutin_window = "0.40.0"
piston2d-opengl_graphics = "0.48.0"

[dependencies.piston2d-graphics]
version = "0.23.0"
features = ["glyph_cache_rusttype"]
